$Id$
===============================================================

266	Luke Howard <lukeh@padl.com>

	* fix for BUG#129: native linker doesn't use LDFLAGS
	* fix for BUG#402: incorrectly detected glibc on armel
	* fix for BUG#411: memory leak in do_init()
	* fix for BUG#412: check whether resolv.conf has changed
	* fix for BUG#412: don't close nested contexts
	* fix for BUG#412: make syslog debugging configurable
	* fix for BUG#412: support configurable site name
	* fix for BUG#412: tidy up bootparams code
	* fix for BUG#412: use macros for ldap_get_option calls
	* fix for BUG#412: better debugging of NSS status codes
	* fix for BUG#412: rewrite and abstract Kerberos support
	* fix for BUG#412: allow runtime configuration of LDAP
	  configuration file and keytab using environment
	* fix for BUG#412: correctly clamp max sleep time
	* fix for BUG#412: sort SRV records by weight and priority
	* fix for BUG#412: support microsecond backoff granularity
	* fix for BUG#414: SIGPIPE handling in atfork()
	* fix for BUG#416: FreeBSD 7.x/8.x compatibility

265	Luke Howard <lukeh@padl.com>

	* fix for BUG#132: add versioning information to binary
	* fix for BUG#403: add AM_MAINTAINER_MODE
	* fix for BUG#388: bad LDAP query for ether lookups
	* fix for BUG#391: clarify bind timelimit defaults
	  in ldap.conf
	* fix for BUG#392: call do_close() if ldap_result()
	  or ldap_parse_result() fails (before returning
	  NSS_UNAVAIL)
	* fix for BUG#401: FreeBSD thread library check
	* fix for BUG#409: deallocate context in
	  _nss_ldap_ent_context_release() to avoid bad usage
	* fix for BUG#410: don't leak file descriptors in
	  _nss_ldap_readconfig

264	Luke Howard <lukeh@padl.com>

	* fix for BUG#378: MAP_H_ERRNO() should map NSS_TRYAGAIN
	  to NETDB_INTERNAL not TRY_AGAIN
	* fix for BUG#379: ldaps:// URIs only work if "ssl on"
	  is set
	* fix for BUG#248: nss_ldap exposes malformed entries
	  to the system

263	Luke Howard <lukeh@padl.com>
